--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "sirv-cli": "^1.0.0",
     "svelte-check": "^2.2.4",
     "svelte-preprocess": "^4.7.4",
