--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-cloudflare-workers": "^1.0.0-next.19",
     "@sveltejs/kit": "next",
     "@types/leaflet": "^1.7.4",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
