--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore  --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "deploy": "yarn publish",
+    "publish": "wrangler publish"
   },
   "devDependencies": {
     "@sveltejs/adapter-cloudflare-workers": "^1.0.0-next.19",
@@ -26,10 +28,8 @@
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
-  },
-  "type": "module",
-  "dependencies": {
+    "typescript": "^4.0.0",
     "leaflet": "^1.7.1"
-  }
+  },
+  "type": "module"
 }
