--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@sveltejs/adapter-cloudflare-workers": "^1.0.0-next.19",
     "@sveltejs/kit": "next",
     "@types/leaflet": "^1.7.4",
+    "@types/moment": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "leaflet": "^1.7.1",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "sass": "^1.38.0",
@@ -28,8 +30,10 @@
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0",
-    "leaflet": "^1.7.1"
+    "typescript": "^4.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "moment": "^2.29.1"
+  }
 }
