--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "leaflet": "^1.7.1",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "sass": "^1.38.0",
     "svelte": "^3.34.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
+    "svelte-range-slider-pips": "^1.8.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0",
-    "leaflet": "^1.7.1"
+    "typescript": "^4.0.0"
   },
   "type": "module"
 }
