--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "svelte-preprocess": "^4.0.0",
     "svelte-range-slider-pips": "^1.8.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.0.0",
+    "moment": "^2.29.1"
   },
   "type": "module",
   "dependencies": {
-    "moment": "^2.29.1"
+    
   }
 }
