--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@sveltejs/adapter-cloudflare-workers": "^1.0.0-next.19",
     "@sveltejs/kit": "next",
+    "@types/fuzzy-search": "^2.1.1",
     "@types/leaflet": "^1.7.4",
     "@types/moment": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
@@ -23,6 +24,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "leaflet": "^1.7.1",
+    "moment": "^2.29.1",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "sass": "^1.38.0",
@@ -31,11 +33,10 @@
     "svelte-preprocess": "^4.0.0",
     "svelte-range-slider-pips": "^1.8.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0",
-    "moment": "^2.29.1"
+    "typescript": "^4.0.0"
   },
   "type": "module",
   "dependencies": {
-    
+    "fuzzy-search": "^3.2.1"
   }
 }
