--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore  --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "deploy": "yarn publish",
+    "deploy": "yarn run publish",
     "publish": "wrangler publish"
   },
   "devDependencies": {
