--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "svelte-notifications": "^0.9.91",
     "svelte-preprocess": "^4.0.0",
     "svelte-range-slider-pips": "^1.8.0",
+    "svelte-simple-modal": "^1.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
