Not quite working store system for notification settings

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "type": "module",
   "dependencies": {
     "firebase": "^8.10.0",
-    "fuzzy-search": "^3.2.1"
+    "fuzzy-search": "^3.2.1",
+    "localforage": "^1.10.0"
   }
 }
