--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+            "type": "pwa-chrome",
             "request": "launch",
             "name": "Launch Chrome against dev server",
-            "url": "http://localhost:5000",
+            "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}"
         }
     ]
