--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "fuse.js": "^6.4.6",
+    "fuzzysearch": "^1.0.3",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
     "prettier": "~2.2.1",
@@ -42,7 +43,6 @@
   "type": "module",
   "dependencies": {
     "firebase": "^8.10.0",
-    "fuzzysearch-ts": "^1.0.3",
     "localforage": "^1.10.0"
   }
 }
