--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare-workers": "^1.0.0-next.19",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0-next.241",
 		"@types/fuzzy-search": "^2.1.1",
 		"@types/leaflet": "^1.7.9",
 		"@types/moment": "^2.13.0",
