--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,20 @@
 name = "govhack2021"
-type = "webpack"
+type = "javascript"
 account_id = "034162a6d46bca3ff53f5ffb05e35ff1"
 usage_model = ''
 route = "*toi.qrl.nz/*"
 zone_id = '91ef5779b4f5dd227318de25a23e939e'
 compatibility_flags = []
 workers_dev = false
-site = {bucket = "./build",entry-point = "./workers-site"}
+compatibility_date = "2021-10-22"
 vars = { NODE_ENV = "production" }
+
+[site]
+bucket = "./build"
+entry-point = "./workers-site"
+
+[build]
+command = ""
+
+[build.upload]
+format = "service-worker"
